# PytorchServing

./: .gitattributes  CMakeLists.txt  README.md  build.sh  main.cpp
config/: server.toml
core/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ModelBase.cpp  ModelBase.h  ModelManager.cpp  ModelManager.h  PytorchModelFromIStream.cpp  PytorchModelFromIStream.h  Tensor.cpp  Tensor.h
data/: 20190810
interface/: CMakeLists.txt  PredictImp.cpp  PredictImp.h
proto/: CMakeLists.txt  Core.grpc.pb.cc  Core.grpc.pb.h  Core.pb.cc  Core.pb.h  Core.proto  Predict.grpc.pb.cc  Predict.grpc.pb.h  Predict.pb.cc  Predict.pb.h  Predict.proto  Tensor.grpc.pb.cc  Tensor.grpc.pb.h  Tensor.pb.cc  Tensor.pb.h  Tensor.proto  build.sh
sources/: CMakeLists.txt  FileStorageToIStreamSource.cpp  FileStorageToIStreamSource.h  Source.cpp  Source.h
test/client/: CMakeLists.txt  ClientServing  build.sh  main.cpp
util/: CMakeLists.txt  Code.cpp  Code.h  ConfigType.h  Log.cpp  Log.h  Object.h  Type.h
