CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(ClientServing)
SET(CMAKE_CXX_STANDARD 11)
INCLUDE_DIRECTORIES(
		${PROJECT_SOURCE_DIR}/../../proto/
)
LINK_DIRECTORIES(
        /usr/local/lib
        /usr/lib
)

LINK_LIBRARIES(libglog.a)
LINK_LIBRARIES(libgrpc.so)
LINK_LIBRARIES(libgrpc++.so)

SET(THREADS_PREFER_PTHREAD_FLAG ON)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
SET(CMAKE_CXX_FLAGS "-O0 -Wall -g")
#SET(CMAKE_CXX_FLAGS "-D_GLIBCXX_USE_CXX11_ABI=0") #添加了这个会导致链接protobuf失败
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(Protobuf REQUIRED)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(ClientServing ${DIR_SRCS} )

TARGET_LINK_LIBRARIES(ClientServing
        ${PROJECT_SOURCE_DIR}/../../build/proto/libproto.so
		${PROTOBUF_LIBRARIES}
    )
